--- a/plutonium-cms-div.html
+++ b/plutonium-cms-div.html
@@ -48,14 +48,14 @@ CMS related components.
                 'sectionsAddedOrRemoved(contentModel.sections.*)'
             ],
             attached: function () {
-                this.contentModel.sections.forEach(function (s, index) {
-                    var display = document.createElement(this.identifyDisplay(s.type));
-                    display.id = 'contentSection' + index;
-                    display.contentModel = s;
-                    display.verticalAlign = 'auto';
-                    display.horizontalAlign = 'auto';
-                    this.$.contentContainer.appendChild(display);
-                }, this);
+//                this.contentModel.sections.forEach(function (s, index) {
+//                    var display = document.createElement(this.identifyDisplay(s.type));
+//                    display.id = 'contentSection' + index;
+//                    display.contentModel = s;
+//                    display.verticalAlign = 'auto';
+//                    display.horizontalAlign = 'auto';
+//                    this.$.contentContainer.appendChild(display);
+//                }, this);
             },
             detached: function () {
                 var children = this.$.contentContainer.children;
@@ -85,20 +85,19 @@ CMS related components.
                     }, this);
                 } else {
 
-//                    var children = this.$.contentContainer.children;
-//                    for (var i = 0; i < children.length; i++) {
-//                        this.$.contentContainer.removeChild(children[i]);
-//                    }
-//
-////                    var self = this;
-//                    changeRecord.value.forEach(function (s, index) {
-//                        var display = document.createElement(this.identifyDisplay(s.type));
-//                        display.id = 'contentSection' + index;
-//                        display.contentModel = s;
-//                        display.verticalAlign = 'auto';
-//                        display.horizontalAlign = 'auto';
-//                        this.$.contentContainer.appendChild(display);
-//                    }, this);
+                    var children = this.$.contentContainer.children;
+                    for (var i = 0; i < children.length; i++) {
+                        this.$.contentContainer.removeChild(children[i]);
+                    }
+
+                    changeRecord.value.forEach(function (s, index) {
+                        var display = document.createElement(this.identifyDisplay(s.type));
+                        display.id = 'contentSection' + index;
+                        display.contentModel = s;
+                        display.verticalAlign = 'auto';
+                        display.horizontalAlign = 'auto';
+                        this.$.contentContainer.appendChild(display);
+                    }, this);
 
                 }
 
