--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -19,10 +19,10 @@ CMS related components.
 
             }
             // TODO: add as mixin
-/*            :host div.container {
-                @apply(--layout-vertical);
-                @apply(--layout-center);
-            }*/
+            /*            :host div.container {
+                            @apply(--layout-vertical);
+                            @apply(--layout-center);
+                        }*/
             :host h2 {
                 margin-top: 10px;
                 margin-bottom: 10px;
@@ -83,7 +83,14 @@ CMS related components.
 
                 //                this.$.contentModelData.innerHTML = data;
             },
-            onFullScreen: function(event, details) {
+            /**
+             * Fired when `plutonium-cms-video-display` goes to fullscreen.
+             *
+             * @event plutonium-fullscreen
+             * @param {{}} Fullscreen parameters.
+             */
+
+            onFullScreen: function (event, details) {
                 console.log(this.is, 'go to fullscreen');
                 this.fire('plutonium-fullscreen', {});
             }
