--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -32,7 +32,8 @@ CMS related components.
         <h2>[[contentModel.title]]</h2>
         <div class="layout vertical center">
             <video id="videoDisplay" width="[[_effectiveWidth]]" height="[[_effectiveHeight]]" src="{{videoSrc}}" type="video/mp4" 
-                   controls="true" preload="auto"  autobuffer>
+                   controls="true" preload="auto"  autobuffer
+                   on-blur="onBlur">
                 This browser does not support HTML5.
             </video>
         </div>
@@ -57,9 +58,15 @@ CMS related components.
             listeners: {
                 'webkitfullscreenchange': 'onFullScreen',
                 'fullscreenchange': 'onFullScreen',
-                'mozfullscreenchange': 'onFullScreen'
+                'mozfullscreenchange': 'onFullScreen',
+                'videoDisplay.blur': 'onBlur'
             },
             ready: function () {
+                var self = this;
+                window.addEventListener('blur', function () {
+                    document.querySelector('#videoDisplay').pause();
+                    //do something here 
+                }, false);
 //                this.$.player.mediaelementplayer(/* Options */);
             },
             _observeSize: function (width, height) {
@@ -93,6 +100,13 @@ CMS related components.
             onFullScreen: function (event, details) {
                 console.log(this.is, 'go to fullscreen');
                 this.fire('plutonium-fullscreen', {});
+            },
+            onBlur: function (event, details) {
+                document.querySelector(details.id).stop();
+                console.log(this.is, 'blurred');
+            },
+            onFocus: function (event, details) {
+                document.querySelector(details.id).start();
             }
         });
     </script>
