--- a/plutonium-cms-div.html
+++ b/plutonium-cms-div.html
@@ -88,21 +88,22 @@ CMS related components.
                 } else {
                     console.debug(this.is, 'initialize', changeRecord);
 
-                    var children = this.$.contentContainer.children;
-                    for (var i = 0; i < children.length; i++) {
-                        this.$.contentContainer.removeChild(children[i]);
-                    }
-
-                    changeRecord.value.forEach(function (s, index) {
-                        var section = document.createElement(this.identifyDisplay(s.type));
-                        section.id = 'contentSection' + index;
-                        section.contentModel = s;
-                        section.verticalAlign = 'auto';
-                        section.horizontalAlign = 'auto';
-                        this.$.contentContainer.appendChild(section);
-                        console.debug(this.is, 'add section', (section.name) ? ('section[' + section.type + ',' + section.name + ']') : 'transient', 'from position', index);
-
-                    }, this);
+//                    var children = this.$.contentContainer.children;
+//                    
+//                    for (var i = 0; i < children.length; i++) {
+//                        this.$.contentContainer.removeChild(children[i]);
+//                    }
+//
+//                    changeRecord.value.forEach(function (s, index) {
+//                        var section = document.createElement(this.identifyDisplay(s.type));
+//                        section.id = 'contentSection' + index;
+//                        section.contentModel = s;
+//                        section.verticalAlign = 'auto';
+//                        section.horizontalAlign = 'auto';
+//                        this.$.contentContainer.appendChild(section);
+//                        console.debug(this.is, 'add section', (section.name) ? ('section[' + section.type + ',' + section.name + ']') : 'transient', 'from position', index);
+//
+//                    }, this);
 
                 }
 
