--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -41,8 +41,8 @@ CMS related components.
 
     <script>
         function onBlurVideo() {
+            console.debug(this.is, 'blur');
             document.querySelector('#videoDisplay').pause();
-            //do something here 
         }
 
         Polymer({
@@ -67,13 +67,13 @@ CMS related components.
 //                'videoDisplay.blur': 'onBlur'
             },
             attached: function () {
-                var self = this;
+                console.debug(this.is, 'attached');
                 window.addEventListener('blur', onBlurVideo, false);
 //                this.$.player.mediaelementplayer(/* Options */);
             },
             detached: function () {
-                window.removeEventListener("blur", onBlurVideo);
-
+                console.debug(this.is, 'detached');
+                window.removeEventListener('blur', onBlurVideo);
             },
             _observeSize: function (width, height) {
                 this.updateStyles();
