--- a/plutonium-cms-overlay-behavior.html
+++ b/plutonium-cms-overlay-behavior.html
@@ -2,9 +2,12 @@
 <link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
 
 <script>
-    
+
     window.Plutonium = window.Plutonium || {};
-    
+
+    /**
+     * @polymerBehavior
+     */
     Plutonium.CmsOverlayBehaviorImpl = {
 //        behaviors: [
 //            Polymer.IronValidatableBehavior
@@ -49,6 +52,9 @@
         },
     };
 
+    /**
+     * @polymerBehavior
+     */
     Plutonium.CmsOverlayBehavior = [
         Polymer.IronValidatableBehavior,
         Plutonium.CmsOverlayBehaviorImpl
