--- a/plutonium-cms-text-editor.html
+++ b/plutonium-cms-text-editor.html
@@ -1,8 +1,8 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-input/paper-input.html">
 <link rel="import" href="../paper-input/paper-textarea.html">
-<link rel="import" href="../plutonium-i18n-controls/plutonium-i18n-input.html">
-<link rel="import" href="../plutonium-i18n-controls/plutonium-i18n-textarea.html">
+<!--<link rel="import" href="../plutonium-i18n-controls/plutonium-i18n-input.html">
+<link rel="import" href="../plutonium-i18n-controls/plutonium-i18n-textarea.html">-->
 
 <link rel="import" href="plutonium-cms-overlay-behavior.html">
 <!--
@@ -28,8 +28,10 @@ CMS related components.
             }
         </style>
         <div class="card-content">
-            <plutonium-i18n-input id="titleInput" label="Title" name="title" value="{{contentModel.title}}" source-lang="[[sourceLang]]" locales="[[locales]]" required auto-validate></plutonium-i18n-input>
-            <plutonium-i18n-textarea id="dataInput" label="Text" name="data" value="{{contentModel.data}}" source-lang="[[sourceLang]]" locales="[[locales]]"></plutonium-i18n-textarea>
+            <paper-input id="titleInput" label="Title" name="title" value="{{contentModel.title}}" required auto-validate></paper-input>
+            <paper-textarea id="dataInput" label="Text" name="data" value="{{contentModel.data}}"></paper-textarea>
+            <!--            <plutonium-i18n-input id="titleInput" label="Title" name="title" value="{{contentModel.title}}" source-lang="[[sourceLang]]" locales="[[locales]]" required auto-validate></plutonium-i18n-input>
+                        <plutonium-i18n-textarea id="dataInput" label="Text" name="data" value="{{contentModel.data}}" source-lang="[[sourceLang]]" locales="[[locales]]"></plutonium-i18n-textarea>-->
         </div>
     </template>
 
